<resources>
    <string name="app_name">Smtaani</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="welcome">Welcome</string>
    <string name="user_name">User Name</string>
    <string name="car_wash">Car Wash</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
</resources>